Added something into header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Clemens' Personal Website</h1>
         <nav>
             <a href="#about">About</a>
-            <a href="#skills">About</a>
+            <a href="#skills">Skills</a>
         </nav>
     </header>
 </body>
