--- a/index.html
+++ b/index.html
@@ -4,105 +4,110 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clemens Schueller Bio</title>
+    <title>Clemens Schueller Personal Website</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
-      <h1>Clemens Schüller</h1>
-      <nav>
-        <a href="#Kontakt">About</a>
-        <a href="#Biograpie">Skills</a>
-      </nav>
-    </header>
+    <main>
+      <header class="page-header">
+        <h1>Clemens Schüller</h1>
+        <nav class="">
+          <a href="#Kontakt">About</a>
+          <a href="#Biograpie">Skills</a>
+        </nav>
+      </header>
 
-    <section>
-      <figure>
-        <img loading="lazy src="/myimages/DKBSchmidt_1909272019 (2) Kopie.jpg"
-        alt="">
-        <figcaption>Beschreibung des Fotos</figcaption>
-      </figure>
-    </section>
+      <section>
+        <figure>
+          <img
+            class="mypic"
+            loading="lazy"
+            src="/myimages/DKBSchmidt_1909272019 (2) Kopie.jpg"
+            alt=""
+          />
+          <figcaption>"Teamwork makes your team work!"</figcaption>
+        </figure>
+      </section>
 
-    <section>
-      <h2>Skills</h2>
-      <button>MS-Office</button>
-      <button>HTML</button>
-      <button>JavaScript</button>
-      <button>CSS</button>
-      <button>SEO</button>
-      <button>Account Management</button>
-      <button>Kundenbindung</button>
+      <section class="skills-interests">
+        <h2>Skills</h2>
+        <button>MS-Office</button>
+        <button>HTML</button>
+        <button>JavaScript</button>
+        <button>CSS</button>
+        <button>SEO</button>
+        <button>Account Management</button>
+        <button>Kundenbindung</button>
 
-      <h2>Interessen</h2>
-      <button>Coding</button>
-      <button>Webdevelopment</button>
-      <button>Neuromarketing</button>
-      <button>Spannende Projekte</button>
-      <button>Basketball</button>
-      <button>Instagram</button>
-      <button>Advertising</button>
-    </section>
+        <h2>Interessen</h2>
+        <button>Coding</button>
+        <button>Webdevelopment</button>
+        <button>Reisen</button>
+        <button>Foodtrends</button>
+        <button>Basketball</button>
+        <button>Streetart</button>
+        <button>Advertising</button>
+      </section>
 
-    <section>
-      <p id="Kontakt">
-        <strong>Kontakt</strong>
-        Clemens Schueller Fon: 0172 123 4567 Mail: schueller.cj@gmail.com
-      </p>
-      <div><a href="">GitHub</a></div>
-      <div><a href="">Codepen</a></div>
-      <div><a href="">Xing</a></div>
-    </section>
+      <address class="contact">        
+        <strong>Kontakt</strong><br />
+        <a href="tel:+491721234567">📞 +49 (0)172 123 4567</a><br />
+        <a href="mailto:clemens@schueller.com">📩 clemens@schueller.com</a>
+      </address>
 
-    <article>
-      <h2>Biographie</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse ex dolorem
-        accusamus delectus maiores laboriosam illo eligendi commodi, atque rem
-        architecto in ipsa nam nisi dignissimos dolorum voluptatem autem totam.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio
-        quasi error eligendi est repudiandae ab laudantium qui iure, architecto
-        modi officiis, libero alias. Nemo quaerat ipsum modi dolorum sapiente
-        eum.
+        <div><a href="https://github.com/clemensschueller" rel="noopener noreferrer" target="_blank"><img src="myimages/github_PNG83.png" alt="personal github link"></a></div>
+        <div><a href="">Codepen</a></div>
+        <div><a href="">Xing</a></div>
       </p>
-    </article>
 
-    <section>
-      <table>
-        <thead>
-          <tr>
-            <th><h2>Lebenslauf</h2></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th><strong>Erfahrung</strong></th>
-            <th><strong>Ausbildung</strong></th>
-          </tr>
-          <tr>
-            <td>
-              07.2020 - 12.2020 Nawrocki PR GmbH, Hamburg Key Account Manager
-            </td>
-            <td>
-              04.2021 - 07.2021 neue fische, Hamburg Bootcamp Web Developer
-            </td>
-            <td>06.2018 - 06.2020 AUTO1 Group, Hamburg Account Manager</td>
-            <td>
-              2012 - 2013 University of Bangor, Bangor, UK Consumer Psychology
-              with Business (M.A.)
-            </td>
-            <td>
-              08.2014 - 09.2017 Hilfe Daheim GmbH, Hamburg Kaufmännischer
-              Angestellter
-            </td>
-            <td>
-              04.2004 - 03.2009 Universität Hamburg, Hamburg
-              Betriebswirtschaftslehre Diplom-Betriebswirt
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </section>
+      <article>
+        <h2>Wer ich bin</h2>
+        <p>
+          Geboren und aufgewachsen bin ich in Hamburg. Nach Abitur und Zivildienst, habe ich in der Marktforschung gearbeitet. Dort konnte ich etwas Arbeitserfahrung sammeln. Meine berufliche Ausbildung habe ich an der Uni Hamburg mit einem BWL-Studium mit Schwerpunkt Marketing gestartet. Ich bin u.a. sehr an anderen Ländern, Kulturen und Sprachen interessiert und leide ständig an Fernweh ;) <br>
+          Deswegen bin ich nach meinem Studium für ein längeres Praktikum nach Barcelona gezogen. Nach einem weiteren Praktikum im SEO bei einem Startup und einem Job in der Auftragsabwicklung bei Airbus in Hamburg-Finkenwerder, zog es mich ins englischsprachige Ausland. Da ich schon immer im Ausland studieren wollte, habe ich meinen Master in Wales, Großbritannien gemacht.<br> 
+          Nach einigen Arbeitsstationen - zuletzt war ich als Account Manager tätig - bin ich meinem Traum, einer Karriere als Programmierer nachzugehen, einen Schritt näher gekommen und mache das Bootcamp bei neue fische als Web Developer.<br>
+          Aktuell wohne ich in meiner Heimatstadt Hamburg.
+        </p>
+      </article>
+
+      <section>
+        <table>
+          <thead>
+            <tr>
+              <th><h2>CV</h2></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th><strong>Erfahrung</strong></th>
+              <th><strong>Ausbildung</strong></th>
+            </tr>
+            <tr>
+              <td>
+                07.2020 - 12.2020 Nawrocki PR GmbH, Hamburg Key Account Manager
+              </td>
+              <td>
+                04.2021 - 07.2021 neue fische, Hamburg Bootcamp Web Developer
+              </td>
+              <td>06.2018 - 06.2020 AUTO1 Group, Hamburg Account Manager</td>
+              <td>
+                2012 - 2013 University of Bangor, Bangor, UK Consumer Psychology
+                with Business (M.A.)
+              </td>
+              <td>
+                08.2014 - 09.2017 Hilfe Daheim GmbH, Hamburg Kaufmännischer
+                Angestellter
+              </td>
+              <td>
+                04.2004 - 03.2009 Universität Hamburg, Hamburg
+                Betriebswirtschaftslehre Diplom-Betriebswirt
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+    </main>
 
     <footer>
       <nav>
