add designed elements

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   </head>
   <body>
     <main>
-      <header class="page-header">
+      <header id="top">
         <h1>Clemens Schüller</h1>
-        <nav class="">
-          <a href="#Kontakt">About</a>
-          <a href="#Biograpie">Skills</a>
+        <nav>
+          <a class="links" href="#contact">Kontakt</a>
+          <a class="links" href="#about">Über mich</a>
+          <a class="links" href="#cv">CV</a>
         </nav>
       </header>
 
@@ -31,77 +32,133 @@
 
       <section class="skills-interests">
         <h2>Skills</h2>
-        <button>MS-Office</button>
-        <button>HTML</button>
-        <button>JavaScript</button>
-        <button>CSS</button>
-        <button>SEO</button>
-        <button>Account Management</button>
-        <button>Kundenbindung</button>
-
+        <div class="keywords">
+          <button>MS-Office</button>
+          <button>HTML</button>
+          <button>JavaScript</button>
+          <button>CSS</button>
+          <button>SEO</button>
+          <button>Account Management</button>
+          <button>Kundenbindung</button>
+        </div>
         <h2>Interessen</h2>
-        <button>Coding</button>
-        <button>Webdevelopment</button>
-        <button>Reisen</button>
-        <button>Foodtrends</button>
-        <button>Basketball</button>
-        <button>Streetart</button>
-        <button>Advertising</button>
+        <div class="keywords">
+          <button>Coding</button>
+          <button>Webdevelopment</button>
+          <button>Reisen</button>
+          <button>Foodtrends</button>
+          <button>Basketball</button>
+          <button>Streetart</button>
+          <button>Advertising</button>
+        </div>
       </section>
 
-      <address class="contact">        
-        <strong>Kontakt</strong><br />
-        <a href="tel:+491721234567">📞 +49 (0)172 123 4567</a><br />
-        <a href="mailto:clemens@schueller.com">📩 clemens@schueller.com</a>
-      </address>
+      <section>
+        <address id="contact">
+          <strong>Kontakt</strong><br />
+          <a href="tel:+491721234567">📞 +49 (0)172 123 4567</a><br />
+          <a href="mailto:clemens@schueller.com">📩 clemens@schueller.com</a>
+        </address>
+      </section>
 
-      <p>
-        <div><a href="https://github.com/clemensschueller" rel="noopener noreferrer" target="_blank"><img src="myimages/github_PNG83.png" alt="personal github link"></a></div>
-        <div><a href="">Codepen</a></div>
-        <div><a href="">Xing</a></div>
-      </p>
+      <nav class="find-me">
+        <a
+          href="https://github.com/clemensschueller"
+          rel="noopener noreferrer"
+          target="_blank"
+          ><img
+            src="myimages/github_PNG83.png"
+            alt="find me on github"
+            width="100"
+            height="100"
+        /></a>
+        <a
+          href="https://codepen.io/Clemson040"
+          rel="noopener noreferrer"
+          target="_blank"
+          ><img
+            src="myimages/CodePen-Button-Black-Large.png"
+            alt="find me on codepen"
+            width="100"
+            height="100"
+        /></a>
+        <a
+          href="https://www.linkedin.com/in/clemens-sch%C3%BCller-332a775b/"
+          rel="noopener noreferrer"
+          target="_blank"
+          ><img
+            src="myimages/600px-LinkedIn_logo_initials.webp"
+            alt="find me on linkedin"
+            width="100"
+            height="100"
+        /></a>
+        <a
+          href="https://www.instagram.com/clemensjan/"
+          rel="noopener noreferrer"
+          target="_blank"
+          ><img
+            src="myimages/insta-logo.png"
+            alt="find me on insta"
+            width="100"
+            height="100"
+        /></a>
+      </nav>
 
-      <article>
+      <article id="about">
         <h2>Wer ich bin</h2>
         <p>
-          Geboren und aufgewachsen bin ich in Hamburg. Nach Abitur und Zivildienst, habe ich in der Marktforschung gearbeitet. Dort konnte ich etwas Arbeitserfahrung sammeln. Meine berufliche Ausbildung habe ich an der Uni Hamburg mit einem BWL-Studium mit Schwerpunkt Marketing gestartet. Ich bin u.a. sehr an anderen Ländern, Kulturen und Sprachen interessiert und leide ständig an Fernweh ;) <br>
-          Deswegen bin ich nach meinem Studium für ein längeres Praktikum nach Barcelona gezogen. Nach einem weiteren Praktikum im SEO bei einem Startup und einem Job in der Auftragsabwicklung bei Airbus in Hamburg-Finkenwerder, zog es mich ins englischsprachige Ausland. Da ich schon immer im Ausland studieren wollte, habe ich meinen Master in Wales, Großbritannien gemacht.<br> 
-          Nach einigen Arbeitsstationen - zuletzt war ich als Account Manager tätig - bin ich meinem Traum, einer Karriere als Programmierer nachzugehen, einen Schritt näher gekommen und mache das Bootcamp bei neue fische als Web Developer.<br>
+          Geboren und aufgewachsen bin ich in Hamburg. Nach Abitur und
+          Zivildienst, habe ich in der Marktforschung gearbeitet. Dort konnte
+          ich etwas Arbeitserfahrung sammeln. Meine berufliche Ausbildung habe
+          ich an der Uni Hamburg mit einem BWL-Studium mit Schwerpunkt Marketing
+          gestartet. Ich bin u.a. sehr an anderen Ländern, Kulturen und Sprachen
+          interessiert und leide ständig an Fernweh ;)<br />
+          Deswegen bin ich nach meinem Studium für ein längeres Praktikum nach
+          Barcelona gezogen. Nach einem weiteren Praktikum im SEO bei einem
+          Startup und einem Job in der Auftragsabwicklung bei Airbus in
+          Hamburg-Finkenwerder, zog es mich ins englischsprachige Ausland. Da
+          ich schon immer im Ausland studieren wollte, habe ich meinen Master in
+          Wales, Großbritannien gemacht.<br />
+          Nach einigen Arbeitsstationen - zuletzt war ich als Account Manager
+          tätig - bin ich meinem Traum, einer Karriere als Programmierer
+          nachzugehen, einen Schritt näher gekommen und mache das Bootcamp bei
+          neue fische als Web Developer.<br />
           Aktuell wohne ich in meiner Heimatstadt Hamburg.
         </p>
       </article>
 
-      <section>
+      <section id="cv">
+        <h2>CV</h2>
         <table>
           <thead>
-            <tr>
-              <th><h2>CV</h2></th>
-            </tr>
-          </thead>
-          <tbody>
             <tr>
               <th><strong>Erfahrung</strong></th>
               <th><strong>Ausbildung</strong></th>
             </tr>
+          </thead>
+          <tbody>
             <tr>
               <td>
-                07.2020 - 12.2020 Nawrocki PR GmbH, Hamburg Key Account Manager
+                07.2020 - 12.2020 Nawrocki PR, Hamburg, Key Account Manager
               </td>
               <td>
-                04.2021 - 07.2021 neue fische, Hamburg Bootcamp Web Developer
+                04.2021 - 07.2021 neue fische, Hamburg, Bootcamp Web Developer
               </td>
-              <td>06.2018 - 06.2020 AUTO1 Group, Hamburg Account Manager</td>
+            </tr>
+            <tr>
+              <td>06.2018 - 06.2020 AUTO1 Group, Hamburg, Account Manager</td>
               <td>
-                2012 - 2013 University of Bangor, Bangor, UK Consumer Psychology
-                with Business (M.A.)
+                2012 - 2013 Bangor University, Bangor, Wales, UK, Consumer
+                Psychology with Business (M.A.)
               </td>
+            </tr>
+            <tr>
               <td>
-                08.2014 - 09.2017 Hilfe Daheim GmbH, Hamburg Kaufmännischer
+                08.2014 - 09.2017 Hilfe Daheim GmbH, Hamburg, Kaufmännischer
                 Angestellter
               </td>
               <td>
-                04.2004 - 03.2009 Universität Hamburg, Hamburg
-                Betriebswirtschaftslehre Diplom-Betriebswirt
+                04.2004 - 03.2009 Universität Hamburg, Hamburg, BWL (Dipl.)
               </td>
             </tr>
           </tbody>
@@ -110,11 +167,7 @@
     </main>
 
     <footer>
-      <nav>
-        <a href="tel:">Tel</a><br />
-        <a></a><br />
-        <a></a><br />
-      </nav>
+      <a href="#top">Top</a>
     </footer>
   </body>
 </html>
